@@ -4,16 +4,21 @@ import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.graphics.g2d.Sprite;
 import com.badlogic.gdx.graphics.g2d.TextureRegion;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.jsontype.impl.LaissezFaireSubTypeValidator;
 import com.google.gson.*;
 import com.google.gson.reflect.TypeToken;
 import io.github.some_example_name.client.controller.mainMenu.StartGameMenuController;
 import io.github.some_example_name.common.model.Farm;
+import io.github.some_example_name.common.model.Game;
+import io.github.some_example_name.common.model.User;
+import io.github.some_example_name.common.model.enums.Gender;
+import io.github.some_example_name.common.model.enums.SecurityQuestion;
 import io.github.some_example_name.common.model.enums.Weather;
 import io.github.some_example_name.client.service.ClientService;
 import io.github.some_example_name.common.model.*;
-import io.github.some_example_name.common.model.relations.Player;
+import io.github.some_example_name.common.model.records.Response;
 import io.github.some_example_name.common.model.structure.Structure;
 import io.github.some_example_name.common.utils.App;
 import io.github.some_example_name.common.variables.Session;
@@ -30,7 +35,7 @@ import java.util.*;
 public class GameClient {
     private static final String SERVER_ADDRESS = "localhost";
     private static final int SERVER_PORT = 5000;
-    private static final Gson GSON = new Gson();
+    private static final Gson GSON = new GsonBuilder().serializeNulls().create();
     private static GameClient instance;
     private Socket socket;
     private PrintWriter out;
@@ -45,7 +50,7 @@ public class GameClient {
         return instance;
     }
 
-    private GameClient() {
+    private GameClient(){
         objectMapper.activateDefaultTyping(LaissezFaireSubTypeValidator.instance,
             ObjectMapper.DefaultTyping.NON_FINAL, JsonTypeInfo.As.PROPERTY);
         objectMapper.addMixIn(Sprite.class, SpriteMixIn.class);
@@ -140,23 +145,21 @@ public class GameClient {
                             String username = obj.get("id").getAsString();
                             int position_x = body.get("position_x").getAsInt();
                             int position_Y = body.get("position_y").getAsInt();
-                            service.handleUpdatePosition(username, position_x, position_Y);
-                        } else if (obj.get("action").getAsString().equals("=update_tile")) {
+                            Direction direction = Direction.values()[body.get("direction").getAsInt()];
+                            service.handleUpdatePosition(username, position_x, position_Y, direction);
+                        } else if (obj.get("action").getAsString().equals("=update_tile")){
                             JsonObject tileObject = body.get("tile").getAsJsonObject();
-                            Tile tile = GSON.fromJson(tileObject, Tile.class);
+                            Tile tile = GSON.fromJson(tileObject,Tile.class);
                             service.updateTileState(tile);
-                        } else if (obj.get("action").getAsString().equals(StructureUpdateState.ADD.getName())) {
+                        } else if (obj.get("action").getAsString().equals(StructureUpdateState.ADD.getName())){
                             decodeStructureAdd(body);
-                        } else if (obj.get("action").getAsString().equals(StructureUpdateState.UPDATE.getName())) {
+                        } else if (obj.get("action").getAsString().equals(StructureUpdateState.UPDATE.getName())){
                             decodeStructureUpdate(body, findObject(body));
-                        } else if (obj.get("action").getAsString().equals(StructureUpdateState.DELETE.getName())) {
+                        } else if (obj.get("action").getAsString().equals(StructureUpdateState.DELETE.getName())){
                             JsonArray jsonTiles = body.get("tiles").getAsJsonArray();
-                            Type listType = new TypeToken<List<Tile>>() {
-                            }.getType();
-                            List<Tile> tiles = GSON.fromJson(jsonTiles, listType);
+                            Type listType = new TypeToken<List<Tile>>(){}.getType();
+                            List<Tile> tiles = GSON.fromJson(jsonTiles,listType);
                             service.handleDeleteStructure(tiles);
-                        } else if (obj.get("action").getAsString().equals("=update_player_carrying")){
-
                         }
                     } catch (JsonParseException e) {
                         System.out.println("Received non-JSON: " + serverMessage);
@@ -244,12 +247,12 @@ public class GameClient {
             out = new PrintWriter(socket.getOutputStream(), true);
             in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
 
-            if (state.equals(StructureUpdateState.DELETE)) {
+            if (state.equals(StructureUpdateState.DELETE)){
                 Map<String, Object> msg = Map.of(
                     "action", state.getName(),
                     "id", Session.getCurrentUser().getUsername(),
-                    "body", Map.of("tiles", structure.getTiles(),
-                        "inFarm", inFarm)
+                    "body", Map.of("tiles",structure.getTiles(),
+                        "inFarm",inFarm)
                 );
                 out.println(GSON.toJson(msg));
             } else {
@@ -280,7 +283,9 @@ public class GameClient {
                 if (field == null) continue;
                 field.setAccessible(true);
                 Class<?> fieldType = field.getType();
-                if (fieldType.equals(int.class) || fieldType.equals(Integer.class)) {
+                if (entry.getValue().isJsonNull()) {
+                    field.set(obj, null);
+                } else if (fieldType.equals(int.class) || fieldType.equals(Integer.class)) {
                     field.set(obj, entry.getValue().getAsInt());
                 } else if (fieldType.equals(boolean.class) || fieldType.equals(Boolean.class)) {
                     field.set(obj, entry.getValue().getAsBoolean());
@@ -297,7 +302,7 @@ public class GameClient {
                 }
             }
         } catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException |
-                 InstantiationException | IllegalAccessException e) {
+                 InstantiationException | IllegalAccessException e ) {
             e.printStackTrace();
             return null;
         }
@@ -316,7 +321,9 @@ public class GameClient {
                 if (field == null) continue;
                 field.setAccessible(true);
                 Class<?> fieldType = field.getType();
-                if (fieldType.equals(int.class) || fieldType.equals(Integer.class)) {
+                if (entry.getValue().isJsonNull()) {
+                    field.set(obj, null);
+                } else if (fieldType.equals(int.class) || fieldType.equals(Integer.class)) {
                     field.set(obj, entry.getValue().getAsInt());
                 } else if (fieldType.equals(boolean.class) || fieldType.equals(Boolean.class)) {
                     field.set(obj, entry.getValue().getAsBoolean());
@@ -336,7 +343,7 @@ public class GameClient {
                     }
                 }
             }
-        } catch (ClassNotFoundException | IllegalAccessException e) {
+        } catch (ClassNotFoundException | IllegalAccessException e ) {
             e.printStackTrace();
             return null;
         }
@@ -357,8 +364,8 @@ public class GameClient {
             for (Structure structure : App.getInstance().getCurrentGame().getVillage().getStructures()) {
                 try {
                     if (structure.getClass().equals(Class.forName(body.get("!class").getAsString())) &&
-                        structure.getTiles().get(0).getX() == prevX &&
-                        structure.getTiles().get(0).getY() == prevY) {
+                        structure.getTiles().getFirst().getX() == prevX &&
+                        structure.getTiles().getFirst().getY() == prevY) {
                         return structure;
                     }
                 } catch (ClassNotFoundException e) {
@@ -369,8 +376,8 @@ public class GameClient {
             for (Structure structure : farm.getStructures()) {
                 try {
                     if (structure.getClass().equals(Class.forName(body.get("!class").getAsString())) &&
-                        structure.getTiles().get(0).getX() == prevX &&
-                        structure.getTiles().get(0).getY() == prevY) {
+                        structure.getTiles().getFirst().getX() == prevX &&
+                        structure.getTiles().getFirst().getY() == prevY) {
                         return structure;
                     }
                 } catch (ClassNotFoundException e) {
@@ -409,8 +416,9 @@ public class GameClient {
                 try {
                     Class<?> fieldType = field.getType();
                     Object obj = field.get(object);
-                    if (obj == null) continue;
-                    if (fieldType.equals(int.class) || fieldType.equals(Integer.class) ||
+                    if (obj == null) {
+                        map.put(field.getName(), null);
+                    } else if (fieldType.equals(int.class) || fieldType.equals(Integer.class) ||
                         fieldType.equals(boolean.class) || fieldType.equals(Boolean.class) ||
                         fieldType.equals(String.class) || fieldType.equals(float.class) ||
                         fieldType.equals(Float.class) || fieldType.equals(double.class) ||
@@ -420,13 +428,12 @@ public class GameClient {
                         map.put(field.getName(), ((Enum<?>) obj).ordinal());
                     } else {
                         if (obj instanceof Structure structure && !structure.getTiles().isEmpty()) {
-                            map.put(field.getName(), encodeStructure(structure, structure.getTiles().get(0)));
+                            map.put(field.getName(), encodeStructure(structure, structure.getTiles().getFirst()));
                         } else {
                             map.put(field.getName(), encodeStructure(obj, null));
                         }
                     }
-                } catch (IllegalAccessException ignored) {
-                }
+                } catch (IllegalAccessException ignored) {}
             }
             clazz = clazz.getSuperclass();
         }
@@ -439,7 +446,7 @@ public class GameClient {
         if (obj.getTiles().isEmpty()) return;
         Farm farm = null;
         for (Farm farm1 : App.getInstance().getCurrentGame().getVillage().getFarms()) {
-            if (farm1.isPairInFarm(new Pair(obj.getTiles().get(0).getX(), obj.getTiles().get(0).getY()))) {
+            if (farm1.isPairInFarm(new Pair(obj.getTiles().getFirst().getX(), obj.getTiles().getFirst().getY()))) {
                 farm = farm1;
                 break;
             }
@@ -454,7 +461,7 @@ public class GameClient {
     private void updateTiles(Structure obj, JsonObject body) {
         obj.getTiles().clear();
         Tile[][] tiles = App.getInstance().getCurrentGame().getTiles();
-        for (int i = 0; i < body.get("!tiles").getAsJsonArray().size(); ) {
+        for (int i = 0; i < body.get("!tiles").getAsJsonArray().size();) {
             Tile tile = tiles[body.get("!tiles").getAsJsonArray().get(i++).getAsInt()]
                 [body.get("!tiles").getAsJsonArray().get(i++).getAsInt()];
             obj.getTiles().add(tile);
@@ -472,7 +479,7 @@ public class GameClient {
         map.put("!isPickable", structure.getIsPickable());
     }
 
-    public void updateTileState(Tile tile) {
+    public void updateTileState(Tile tile){
         try {
             out = new PrintWriter(socket.getOutputStream(), true);
             in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
@@ -480,7 +487,7 @@ public class GameClient {
             Map<String, Object> msg = Map.of(
                 "action", "=update_tile",
                 "id", Session.getCurrentUser().getUsername(),
-                "body", Map.of("tile", tile)
+                "body", Map.of("tile",tile)
             );
 
             out.println(GSON.toJson(msg));
@@ -492,7 +499,7 @@ public class GameClient {
     public void skipTime(int minutes) {
         try {
             out = new PrintWriter(socket.getOutputStream(), true);
-            in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+            in  = new BufferedReader(new InputStreamReader(socket.getInputStream()));
 
             Map<String, Object> msg = Map.of(
                 "action", "_skip_time",
@@ -509,7 +516,7 @@ public class GameClient {
     public void readyForSleep() {
         try {
             out = new PrintWriter(socket.getOutputStream(), true);
-            in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+            in  = new BufferedReader(new InputStreamReader(socket.getInputStream()));
             Weather tomorrowWeather;
             Random random = new Random();
             do {
@@ -531,7 +538,7 @@ public class GameClient {
     public void thor(String x, String y) {
         try {
             out = new PrintWriter(socket.getOutputStream(), true);
-            in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+            in  = new BufferedReader(new InputStreamReader(socket.getInputStream()));
 
             Map<String, Object> msg = Map.of(
                 "action", "_thor",
@@ -548,7 +555,7 @@ public class GameClient {
     public void setWeather(String type) {
         try {
             out = new PrintWriter(socket.getOutputStream(), true);
-            in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+            in  = new BufferedReader(new InputStreamReader(socket.getInputStream()));
 
             Map<String, Object> msg = Map.of(
                 "action", "_set_weather",
